2006-10-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R (constraint) :
	weight parameter added
	* interfaces/R/igraph/src/rinterface.c (R_igraph_constraint) :
	weight parameter added

2006-10-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.vertex.mincut) : removed
	(graph.maxflow, graph.mincut, vertex.connectivity, edge.connectivity)
	(edge.disjoint.paths, vertex.disjoint.paths, graph.adhesion)
	(graph.cohesion) : rewritten
	* interfaces/R/src/rinterface.c (R_igraph_edge_connectivity_pair)
	(R_igraph_vertex_connectivity_pair, R_igraph_minimum_cut) 
	(R_igraph_minimum_vertex_cut_pair, R_igraph_minimum_vertex_cut) :
	removed
	(R_igraph_mincut_value, R_igraph_st_vertex_connectivity)
	(R_igraph_vertex_connectivity, R_igraph_st_edge_connectivity)
	(R_igraph_edge_connectivity, R_igraph_st_mincut_value)
	(R_igraph_edge_disjoint_paths, R_igraph_vertex_disjoint_paths)
	(R_igraph_adhesion, R_igraph_cohesion) : added

2006-10-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_attribute_permute_edges) :
	added

2006-10-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.mincut, graph.vertex.mincut) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_minimum_cut)
	(R_igraph_minimum_vertex_cut_pair, R_igraph_minimum_vertex_cut)

2006-09-28  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (edge.connectivity, graph.adhesion)
	(edge.dosjoint.paths, vertex.connectivity, graph.cohesion)
	(vertex.disjoint.paths) : added
	* interfaces/R/src/rinterface.c (R_igraph_edge_connectivity_pair)
	(R_igraph_edge_connectivity, R_igraph_vertex_connectivity_pair)
	(R_igraph_vertex_connectivity) : added

2006-09-27  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/flow.R (graph.maxflow) : bug corrected

2006-09-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, write.graph) : 