@@ -1,3 +1,8 @@
+2006-10-21  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structure.generators.R (graph.adjacency) :
+	added 'weighted' argument to create weighted graphs
+
 2006-10-18  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/structural.properties.R (constraint) :
